Page for homework repo

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Activity 1: Basic HTML Bio</title>
+</head>
+<h1>SQL Homework</h1>
+<br>
+<body>
+    <p>
+        This was a homework assignment for my data visualization bootcamp through Trilogy.
+    </p>
+    <p>
+        It was rather straight forward, though the most time spent was on figuring out the structure of the database.
+    </p>
+</body>
